# accademyprojects

./: CMakeLists.txt  README.md
include/: Automobile.h  Base.h  Car.h  Moto.h  Utility.h
src/: Automobile.cpp  Base.cpp  Car.cpp  Moto.cpp  Utility.cpp  main.cpp
